--- a/flextable/resources/css/flextable.css
+++ b/flextable/resources/css/flextable.css
@@ -26,6 +26,16 @@
     font-size: 15px;
   }
 
+  .flextable td[align=right],
+  .flextable th[align=right] {
+    text-align: right;
+  }
+
+  .flextable td[align=center],
+  .flextable th[align=center] {
+    text-align: center;
+  }
+
   .flextable__textarea {
     position: absolute;
     top: -1px;
@@ -74,4 +84,27 @@
     .flextable__contextmenu__btn:hover,
     .flextable__contextmenu__btn:focus {
       background-color: #d5d8dd;
+    }
+
+  .flextable__alignmenu {
+    position: absolute;
+  }
+
+    .flextable__alignmenu__btn {
+      float: left;
+      border-width: 1px 0 0;
+      border-style: solid;
+      border-color: #e3e5e8;
+      width: 33.333%;
+      box-sizing: border-box;
+      background-color: #f7f7f8;
+    }
+
+    .flextable__alignmenu__btn:first-child {
+      border-left-width: 1px;
+      border-top-left-radius: 4px;
+    }
+    .flextable__alignmenu__btn:last-child {
+      border-right-width: 1px;
+      border-top-right-radius: 4px;
     }
