--- a/flextable/templates/edit.html
+++ b/flextable/templates/edit.html
@@ -1,2 +1,3 @@
-<input type="hidden" id="{{ id }}" name="{{ name }}" value="{{ value }}">
-
+<div class="flextable-wrapper">
+  <input type="hidden" id="{{ id }}" name="{{ name }}" value="{{ value }}">
+</div>
