--- a/flextable/resources/css/flextable.css
+++ b/flextable/resources/css/flextable.css
@@ -22,6 +22,8 @@
 
 .flextable {
   position: relative;
+  margin-right: 1px;
+  margin-bottom: 1px;
   border: 1px solid #e3e5e8;
   border-collapse: separate;
   border-spacing: 0;
@@ -48,7 +50,7 @@
     empty-cells: show;
     height: 24px;
     min-width: 100px;
-    vertical-align: baseline;
+    vertical-align: top;
   }
 
   .flextable th,
@@ -71,11 +73,13 @@
 
   .flextable__textarea {
     position: absolute;
+    z-index: 1000;
     top: -1px;
     right: -1px;
     bottom: -1px;
     left: -1px;
     margin: 0;
+    border: 1px solid #000;
     width: calc(100% + 2px);
     height: calc(100% + 2px);
     box-sizing: border-box;
@@ -87,6 +91,10 @@
 
   .flextable__textarea:focus {
     outline: 0;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    -moz-appearance:none;
   }
 
   .flextable__contextmenu {
