Vue rewrite (simple edit)

--- a/flextable/templates/edit.html
+++ b/flextable/templates/edit.html
@@ -1,3 +1,5 @@
 <div class="flextable-wrapper">
-  <input type="hidden" id="{{ id }}" name="{{ name }}" value="{{ value }}">
+  <div class="vue-flextable-app">
+    <flextable :value="{{ value }}" id="{{ id }}" name="{{ name }}"></flextable>
+  </div>
 </div>
