--- a/flextable/resources/css/flextable.css
+++ b/flextable/resources/css/flextable.css
@@ -1,4 +1,5 @@
 .flextable-wrapper {
+  position: relative;
   padding: 14px;
   border-radius: 4px;
   border: 1px solid #e3e5e8;
@@ -22,14 +23,7 @@
 
 .flextable {
   position: relative;
-  margin-right: 1px;
-  margin-bottom: 1px;
-  border: 1px solid #e3e5e8;
-  border-collapse: separate;
-  border-spacing: 0;
-  border-width: 1px 0 0 1px;
-  border-style: solid;
-  border-color: #e3e5e8;
+  border-collapse: collapse;
   width: 100%;
 }
 
@@ -44,9 +38,7 @@
   .flextable th,
   .flextable td {
     position: relative;
-    border-width: 0 1px 1px 0;
-    border-style: solid;
-    border-color: #e3e5e8;
+    border: 1px solid #e3e5e8;
     empty-cells: show;
     height: 24px;
     min-width: 100px;
